Fix alignment of gx-edit inside gx-table-cell (#76)

--- a/src/components/renders/bootstrap/edit/edit-render.scss
+++ b/src/components/renders/bootstrap/edit/edit-render.scss
@@ -33,3 +33,14 @@ gx-edit {
     line-height: 1.2;
   }
 }
+
+gx-table-cell {
+  &[align="center"],
+  &[align="right"] {
+    & > gx-edit {
+      flex-basis: auto;
+      flex-grow: 0;
+      flex-shrink: 0;
+    }
+  }
+}
